# ephemeral

./: .editorconfig  .gitignore  Application  README.md  meson.build
.github/: FUNDING.yml
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: gettext.yml  lint.yml  release.yml
build-aux/flatpak/: com.github.cassidyjames.ephemeral.json
data/: Application.css  Welcome.html  appdata.xml  com.github.cassidyjames.ephemeral.appdata.xml.in  gresource.xml  gschema.xml  launcher.desktop  launcher.desktop.in  meson.build
data/styles/: App.css  elementary.css  global.css  non-native.css  odin.css
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: POTFILES  POTFILES.in  README.md  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.cassidyjames.ephemeral.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+161 more)
po/extra/: LINGUAS  POTFILES  ca.po  de.po  es.po  extra.pot  fr.po  it.po  lt.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  tr.po  uk.po
src/: Application.vala  MainWindow.vala  WebContext.vala
src/Dialogs/: CustomSearchDialog.vala  ExternalDialog.vala  PreferencesDialog.vala  ProtocolDialog.vala  ScriptDialog.vala
src/InfoBars/: CloseWhenOpeningExternallyInfoBar.vala  DefaultInfoBar.vala  NativeInfoBar.vala  NetworkInfoBar.vala  PaidInfoBar.vala
src/Views/: ErrorView.vala  WelcomeView.vala
src/Widgets/: BrowserButton.vala  DefaultInfoBar.vala  DownloadsButton.vala  FindBar.vala  IllustrativeDialog.vala  InfoBar.vala  NativeInfoBar.vala  NetworkInfoBar.vala  PaidInfoBar.vala  UrlEntry.vala  WebView.vala  Welcome.vala
vapi/: webkit2gtk-4.0.vapi
